--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,600" rel="stylesheet" type="text/css">
     <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
     <link type="text/css" rel="stylesheet" href="style.css">
-    <title>Шоо хаяж тоглоё</title>
+    <title>Шоо хаях</title>
 </head>
 
 <body>
     <div class="wrapper clearfix">
         <div class="player-0-panel active">
-            <div class="player-name" id="name-0">Тоглогч 1</div>
+            <div class="player-name" id="name-0">Тоглогч-1</div>
             <div class="player-score" id="score-0">15</div>
             <div class="player-current-box">
                 <div class="player-current-label">Идэвхтэй</div>
@@ -21,7 +21,7 @@
         </div>
 
         <div class="player-1-panel ">
-            <div class="player-name" id="name-1">Тоглогч 2</div>
+            <div class="player-name" id="name-1">Тоглогч - 2</div>
             <div class="player-score" id="score-1">68</div>
             <div class="player-current-box">
                 <div class="player-current-label">Идэвхтэй</div>
